src/templates/guide.module.css
.root {
  background-color: var(--background-color);
  border-bottom: var(--border);
}

.spacer {
  background-color: var(--background-color);
}

.guideBottomSpacer {
  border-left: var(--border);
  height: var(--baseline);
}
.title {
  border-bottom: var(--border-purple);
}

.index {
  display: flex;
  flex-wrap: wrap;
  margin: 0;
  padding: 0;
}

.itemSpacer,
.indexLabel {
  display: flex;
  align-items: center;
  border-bottom: var(--border-purple);
  border-left: var(--border-purple);
  height: var(--baseline);
  padding: 0 var(--box-padding);
  list-style: none;
  line-height: var(--baseline-1of3);
}

.indexItem {
  list-style: none;

  & a {
    display: flex;
    align-items: center;
    height: var(--baseline);
    border-bottom: var(--border-purple);
    border-left: var(--border-purple);
    padding: 0 var(--box-padding);
    line-height: var(--baseline-1of3);
  }
}

.indexLabel {
  flex-basis: 100%;
  font-weight: bold;
  text-transform: uppercase;
  color: var(--purple);
}

.indexItem,
.itemSpacer {
  flex-basis: 50%;
  background-color: var(--purple-light);
  color: var(--text-color);
}

.headingBorderTop {
  border-top: var(--border);
}

.paragraph {
  margin: 0;
  max-width: 800px;
  padding: var(--box-padding);
  border-left: var(--border);
  font-size: var(--maru-medium);
  line-height: var(--maru-medium-line-height);
  color: var(--text-color);
}

.blockquote {
  margin: 0;
  padding: 0 var(--box-padding) var(--box-padding) var(--baseline);
  border-left: var(--border);
  & .paragraph {
    border-left: 3px solid var(--purple);
  }
}

.image {
  width: 90%;
}

.video {
  margin: 0;
  padding: var(--box-padding);
  border-left: var(--border);
  max-width: 800px;
}

.videoContainer {
  padding-bottom: var(--baseline-box-9x);
}

.button {
  padding: var(--spacing-xsmall);
  border-left: var(--border);
  border-top: var(--border);
}

.a {
  color: var(--purple);
  text-decoration: underline;
}

.list {
  margin: 0;
  max-width: 800px;
  border-left: var(--border);
  padding: var(--box-padding);
  padding-left: calc(2 * var(--box-padding));
  color: var(--text-color);

  & .paragraph {
    border-left: none;
    padding: 0 0 var(--box-padding) 0;
  }

  & .list {
    border-left: none;
  }
}

.listItem {
  font-size: var(--maru-medium);
  line-height: var(--maru-medium-line-height);
}

.paragraph + .paragraph,
.paragraph + .list,
.list + .paragraph,
.list + .list {
  padding-top: 0;
}

.preWrapper {
  border-left: var(--border);
  border-top: var(--border);
  border-bottom: var(--border);
  padding: 0 var(--box-padding);
  margin: 0;
}
.pre {
  margin: 0;
  border-left: var(--border);
  border-right: var(--border);
  padding: var(--box-padding);
  background-color: var(--gray-light);
  color: var(--text-color);
}

.table {
  border-left: var(--border);
  border-bottom: var(--border);
  border-top: var(--border);
  padding: 0;
  font-size: var(--maru-medium);
  line-height: var(--maru-medium-line-height);

  & table {
    border-left: var(--border);
    border-right: var(--border);
    width: calc(100% - (var(--box-padding) * 2));
    margin: 0 var(--box-padding);
    color: var(--text-color);
  }
}

.tr {
  height: var(--baseline);
}

.td + .td,
.th + .th {
  border-left: var(--border);
}

.td,
.th {
  border-bottom: var(--border);
  padding: 0 var(--spacing-xsmall);
}

.tr:last-child .td {
  border-bottom: none;
}

.th {
  background-color: var(--purple-light);
  color: var(--text-color);
}

.breakSpacer {
  border-top: var(--border);
}

@media (--small) {
  .breadcrumbs {
    display: none;
  }

  .image {
    width: 100%;
  }

  .videoContainer {
    padding-bottom: var(--baseline-box-7x);
  }
  .table {
    & table {
      table-layout: fixed;
      text-wrap: wrap;
    }
  }
}

@media (--xsmall) {
  .indexItem {
    flex-basis: 100%;
  }
  .itemSpacer {
    display: none;
  }
  .table {
    & table {
      table-layout: fixed;
      text-wrap: wrap;
    }
  }
}

